--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -43,8 +43,8 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
-                        <a [routerLink]="['/planningapps/all']">
-                            <span class='glyphicon glyphicon-list-alt'></span> All Applications
+                        <a [routerLink]="['/planningapps/completed']">
+                            <span class='glyphicon glyphicon-list-alt'></span>Completed Applications
                         </a>
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
