Fix Order by Bug for planning apps. Add summary address to customer list

--- a/ClientApp/app/components/customerplanningapp-list/customerplanningapp-list.component.html
+++ b/ClientApp/app/components/customerplanningapp-list/customerplanningapp-list.component.html
@@ -34,7 +34,7 @@
   background: rgb(159, 219, 135); 
   } 
   .highlightTerminated{
-  background: red;
+  background: rgba(158, 92, 92, 0.747);
   } 
 
 
