--- a/ClientApp/app/components/planningappcompleted-list/planningappcompleted-list.component.html
+++ b/ClientApp/app/components/planningappcompleted-list/planningappcompleted-list.component.html
@@ -27,8 +27,8 @@
       padding: 8px;
   } 
 
-  .highlightTerminated{
-  background: red;
+   .highlightTerminated{
+  background: rgba(158, 92, 92, 0.747);
   } 
 
   .highlightArchived{
