--- a/ClientApp/app/components/customer-list/customer-list.component.html
+++ b/ClientApp/app/components/customer-list/customer-list.component.html
@@ -39,9 +39,8 @@
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Address1</th>
-      <th>Address2</th>
-      <th>PostCode</th>
+      <th>Customer Address</th>
+      <th>Development Address</th>
       <th>Email</th>
       <th>Home No</th>
       <th>Mobile No</th>
@@ -51,9 +50,8 @@
   <tr *ngFor="let v of queryResult.items">
       <td>{{ v.firstName}}</td>
       <td>{{ v.lastName }}</td>
-      <td>{{ v.address1 }}</td>
-      <td>{{ v.address2 }}</td>
-      <td>{{ v.postcode }}</td>
+      <td>{{ v.customerAddressSummary }}</td>
+      <td>{{ v.customerAddressSummary }}</td>
       <td>{{ v.emailAddress }}</td>
       <td>{{ v.telephoneHome }}</td>
       <td>{{ v.telephoneMobile }}</td>
