Reseed database, add alternative contact details

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -52,7 +52,7 @@
                             <span class='glyphicon glyphicon-home'></span> State Generators
                         </a>
                     </li>
-                <!-- <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
+                <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                     <a [routerLink]="['/vehicles']">
                         <span class='glyphicon glyphicon-home'></span> Vehicles
                     </a>
@@ -61,7 +61,7 @@
                     <a [routerLink]="['/vehicles/new']">
                         <span class='glyphicon glyphicon-plus'></span> New Vehicles
                     </a>
-                </li> -->
+                </li>
             </ul>
         </div>
     </div>
