--- a/ClientApp/app/components/customer-form/customer-form.component.html
+++ b/ClientApp/app/components/customer-form/customer-form.component.html
@@ -32,19 +32,19 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-1" for="address1">Address1</label>
+                    <label class="control-label col-sm-1" for="address1">AddressLine1</label>
                     <div class="col-sm-6">
-                    <input id="address1" type="text" class="form-control" [(ngModel)]="customer.address1" name="address1" required #address1="ngModel">
-                    <div class="alert alert-danger" *ngIf="address1.touched && !address1.valid">Please specify address.</div>
+                    <input id="addressLine1" type="text" class="form-control" [(ngModel)]="customer.addressLine1" name="addressLine1" required #addressLine1="ngModel">
+                    <div class="alert alert-danger" *ngIf="addressLine1.touched && !addressLine1.valid">Please specify address.</div>
                     </div>
                     <div class="col-sm-5">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-1" for="address1">Address2</label>
+                    <label class="control-label col-sm-1" for="address1">AddressLine2</label>
                     <div class="col-sm-6">
-                    <input id="address2" type="text" class="form-control" [(ngModel)]="customer.address2" name="address2" required #address2="ngModel">
+                    <input id="addressLine2" type="text" class="form-control" [(ngModel)]="customer.addressLine2" name="addressLine2" required #addressLine2="ngModel">
                     </div>
                     <div class="col-sm-5">
                     </div>
@@ -78,6 +78,13 @@
                     <div class="col-sm-8"></div>
                 </div>   
                 <div class="form-group">
+                    <label class="control-label col-sm-1" for="telephoneHome">Work No</label>
+                    <div class="col-sm-3">
+                    <input id="telephoneWork" type="text" class="form-control" [(ngModel)]="customer.telephoneWork" name="telephoneWork">
+                    </div>
+                    <div class="col-sm-8"></div>
+                </div> 
+                <div class="form-group">
                     <label class="control-label col-sm-1" for="telephoneMobile">Mobile No</label>
                     <div class="col-sm-3">
                         <input id="telephoneMobile" type="text" class="form-control" [(ngModel)]="customer.telephoneMobile" name="telephoneMobile" required #telephoneMobile="ngModel">
@@ -85,6 +92,7 @@
                     </div>
                     <div class="col-sm-8"></div>
                 </div>  
+
                 
                 <div class="form-group">
                     <label class="control-label col-sm-1"></label>
