--- a/ClientApp/app/components/customer-list/customer-list.component.html
+++ b/ClientApp/app/components/customer-list/customer-list.component.html
@@ -4,20 +4,18 @@
 </p>
 
 
-
+ 
 <div class="well">
 
-  <div class="form-group">
-      <label class="control-label col-sm-1" >Search</label>
-
-      <input id="searchCriteria" (input)="onSearchChange($event.target.value)" type="text" class="form-control" [(ngModel)]="query.searchCriteria" name="searchCritera">
-      <div class="col-sm-6">
-      </div>
-      <div class="col-sm-3">
+  <div class="input-group">
+      <input id="searchCriteria" (input)="onSearchChange($event.target.value)" placeholder="Search" type="text" class="form-control" [(ngModel)]="query.searchCriteria" name="searchCritera">
+      <div class="input-group-btn">
+          <button class="btn btn-default" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
         </div>
-  </div>
-</div>
-  
+    </div>
+</div> 
 <head>
   <style>
   table {
@@ -34,15 +32,16 @@
   </style>
 </head>
 
+<div class="well">
 <table class="table">
   <thead>
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
       <th>Customer Address</th>
-      <th>Email</th>
+      <th class="glyphicon glyphicon-envelope"></th>
       <th>Home No</th>
-      <th>Mobile No</th>
+      <th class="glyphicon glyphicon-phone"></th>
     </tr>
   </thead>
 
@@ -54,12 +53,13 @@
       <td>{{ v.telephoneHome }}</td>
       <td>{{ v.telephoneMobile }}</td>
       <td>
-        <a [routerLink]="['/customers/edit/', v.id]">Edit</a>
+        <a [routerLink]="['/customers/edit/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
       <td>
-          <a [routerLink]="['/customers/planningapps/', v.id]">Applications</a>
+          <a [routerLink]="['/customers/planningapps/', v.id]" class="btn btn-info btn-xs">Applications <span class="badge">5</span></a>
         </td>
     </tr>
   </tbody>
 </table>
+</div>
 <pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
