--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -19,7 +19,7 @@
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                     <a [routerLink]="['/planningapps']">
-                        <span class='glyphicon glyphicon-list-alt'></span> Applications In Progress
+                        <span class='glyphicon glyphicon-list-alt'></span> Apps In Progress <span class="badge badge-light">15</span>
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
@@ -29,7 +29,7 @@
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/customers']">
-                            <span class='glyphicon glyphicon-user'></span> Customers
+                            <span class='glyphicon glyphicon-user'></span> Customers 
                         </a>
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
@@ -39,20 +39,20 @@
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                     <a [routerLink]="['/planningapps/enquiry']">
-                        <span class='glyphicon glyphicon-list-alt'></span>Web Planning Enquiries
+                        <span class='glyphicon glyphicon-question-sign'></span>Web Enquiries <span class="badge">5</span>
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/planningapps/completed']">
-                            <span class='glyphicon glyphicon-list-alt'></span>Completed Applications
+                            <span class='glyphicon glyphicon-check'></span>Apps Completed 
                         </a>
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/stateinitialisers']">
-                            <span class='glyphicon glyphicon-home'></span> State Generators
+                            <span class='glyphicon glyphicon-cog'></span>State Generators
                         </a>
                     </li>
-                <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
+                <!-- <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                     <a [routerLink]="['/vehicles']">
                         <span class='glyphicon glyphicon-home'></span> Vehicles
                     </a>
@@ -61,7 +61,7 @@
                     <a [routerLink]="['/vehicles/new']">
                         <span class='glyphicon glyphicon-plus'></span> New Vehicles
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
