--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -18,8 +18,8 @@
 
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
-  <li role="presentation" class="active"><a href="#states" aria-controls="states" role="tab" data-toggle="tab">Application Progress</a></li>
-  <li role="presentation"><a href="#details" aria-controls="details" role="tab" data-toggle="tab">Application Summary</a></li>
+  <li role="presentation" class="active"><a href="#details" aria-controls="details" role="tab" data-toggle="tab">Application Summary</a></li>
+  <li role="presentation"><a href="#states" aria-controls="states" role="tab" data-toggle="tab">Application Progress</a></li>
   <li role="presentation"><a href="#customer" aria-controls="customer" role="tab" data-toggle="tab">Customer Details</a></li> 
   <li role="presentation"><a href="#development" aria-controls="development" role="tab" data-toggle="tab">Development Details</a></li> 
   <li role="presentation"><a href="#drawings" aria-controls="photos" role="tab" data-toggle="tab">Drawings</a></li> 
@@ -30,7 +30,7 @@
 <div class="tab-content" *ngIf="planningApp">
   <!-- Planning tab -->
    <!-- State table -->
-  <div role="tabpanel" class="tab-pane active" id="states">
+  <div role="tabpanel" class="tab-pane" id="states">
     <head>
         <style>
         table {
@@ -47,9 +47,28 @@
             } 
       </style>
     </head>
-    
-    <h3>Planning Application Progress</h3>
 
+    <!-- Modal Window Archive-->
+    <div class="modal fade" id="archiveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="exampleModalLabel">Archive Application</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h5>Archiving Not Implemented</h5>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+              <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    
     <div class="well">
         <form class="form-horizontal">
             <div class="form-group">
@@ -63,13 +82,13 @@
         </form>
         <label class="control-label col-sm-11"></label>
         <div class="col-sm-1">
-          <button  *ngIf="planningApp.planningStatus=='Complete'" class="btn btn-success" type="button" (click)="archive()">Archive</button>          
-          <button  *ngIf="planningApp.planningStatus=='Terminated'" class="btn btn-success" type="button" (click)="archive()">Archive</button>          
-          <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-warning" type="button" (click)="terminate()">Terminate</button>          
+          <button  *ngIf="planningApp.planningStatus=='Complete'" class="btn btn-success btn-lg glyphicon glyphicon-cd" type="button" data-toggle="modal" data-target="#archiveModal"></button>          
+          <button  *ngIf="planningApp.planningStatus=='Terminated'" class="btn btn-success btn-lg glyphicon glyphicon-cd" type="button" data-toggle="modal" data-target="#archiveModal"></button>          
+          <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-warning btn-lg glyphicon glyphicon-remove-sign" type="button" (click)="terminate()"></button>          
         </div>
           <div class="col-sm-1">
         </div>
-
+        
     <table class="table">   
       <thead>
         <tr>
@@ -85,7 +104,7 @@
           <td>{{ v.dateCompleted }}</td>
           <td>{{ v.stateStatus }}</td>
           <td>
-            <a [routerLink]="['/planningappstate/', v.id]">Edit</a>
+            <a [routerLink]="['/planningappstate/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"> </a>
           </td>
         </tr>
       </tbody>
@@ -94,7 +113,7 @@
         <div class="form-group">
             <label class="control-label col-sm-11"></label>
             <div class="col-sm-1">
-                <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-primary" type="button" (click)="submit()">Complete</button>               
+                <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-primary btn-lg glyphicon glyphicon-arrow-down" type="button" (click)="nextState()"></button>               
              </div>
               <div class="col-sm-1">
             </div>
@@ -103,7 +122,7 @@
   </div>
   </div>
 
-  <div role="tabpanel" class="tab-pane" id="details">
+  <div role="tabpanel" class="tab-pane active" id="details">
     <div class="well">
       <form class="form-horizontal" #f1="ngForm" (submit)="submit()">
         <div class="form-group">
@@ -116,7 +135,7 @@
         </div> 
   
         <div class="form-group">
-          <label class="control-label col-sm-2" for="planningStatus">Completion Date</label>
+          <label class="control-label col-sm-2" for="planningStatus">Est Completion Date</label>
           <div class="col-sm-3">
             <input id="completionDate" type="text"  class="form-control" [(ngModel)]="planningApp.completionDate" name="completionDate">
           </div>
@@ -158,15 +177,6 @@
           </div>
             <div class="col-sm-7">
           </div>
-        </div>  
-  
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="planningStatus">Next State</label>
-          <div class="col-sm-3">
-            <input id="nextState" type="text" class="form-control" [(ngModel)]="planningApp.nextState" name="nextState">
-          </div>
-            <div class="col-sm-7">
-          </div>
         </div> 
       </form>
     </div>
@@ -176,6 +186,7 @@
   <div role="tabpanel" class="tab-pane" id="customer">
       <div class="well">
           <form class="form-horizontal">
+
                 <div class="form-group">
                     <label class="control-label col-sm-1" for="firstName">First Name</label>
                     <div class="col-sm-3">
