--- a/ClientApp/app/components/planningapp-list/planningapp-list.component.html
+++ b/ClientApp/app/components/planningapp-list/planningapp-list.component.html
@@ -1,22 +1,15 @@
 <h2>Applications In Progress</h2>
-<p>
-  <a [routerLink]="['/planningapps/new']" class="btn btn-primary">New Planning App</a>
-</p>
 
 <div class="well">
-
-    <!-- <div class="col-sm-2"> -->
-        <div class="form-group">
-          <label for="Planning Status">Planning Status</label>
-          <select id="planningStatus" class="form-control" [(ngModel)]="query.planningAppType" (change)="onStateFilterChange()">
-            <option value=""></option>
-            <option *ngFor="let m of stateStatuses" value="{{ m.name }}">{{ m.name }}</option>
-          </select>  
-        </div>
-  <!-- </div> -->
-  <!-- <div class="col-sm-10">
-    </div> -->
+  <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-filter"></i></span>
+      <select id="planningStatus" class="form-control" placeholder="Search" [(ngModel)]="query.planningAppType" (change)="onStateFilterChange()">
+        <option value=""></option>
+        <option *ngFor="let m of stateStatuses" value="{{ m.name }}">{{ m.name }}</option>
+      </select>  
+  </div>
 </div>
+
 
 <head>
   <style>
@@ -51,7 +44,7 @@
   /* tr:nth-child(even) {background-color: #f2f2f2;} */
   </style>
 </head>
-
+<div class="well">
 <table class="table">
   <thead>
     <tr>
@@ -80,10 +73,11 @@
       <td>{{ v.councilPlanningAppId }}</td>
       <td>{{ v.completionDate }}</td>
       <td>
-        <a [routerLink]="['/planningapps/', v.id]">View</a>
+        <a [routerLink]="['/planningapps/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
     </tr>
   </tbody>
 </table>
+</div>
 <!-- <pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination> -->
 <pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
